--- a/src/layouts/style.module.css
+++ b/src/layouts/style.module.css
@@ -1,3 +1,4 @@
 .main {
+  padding-top: var(--header-height);
   background-color: var(--background-color)
 }
