--- a/src/pages/Doc/style.module.css
+++ b/src/pages/Doc/style.module.css
@@ -1,12 +1,17 @@
 .container {
-  min-height: calc(100vh - var(--header-height));
+  /* min-height: calc(100vh - var(--header-height)); */
   display: flex;
 }
 
 /* SIDEBAR */
 .sidebar {
-  width: 20%;
+  height: calc(100vh - var(--header-height));
+  width: 300px;
   padding: 5px;
+  position: fixed;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-gutter: stable;
 }
 
 .list {
@@ -17,6 +22,8 @@
 
 /* MAIN */
 .main {
-  width: 80%;
+  min-height: calc(100vh - var(--header-height));
+  width: 100%;
+  margin-left: var(--sidebar-width);
   background-color: var(--secondary-foreground-color);
 }
